[package]
name = "tty"
version = "0.4.2"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Create and use pseudoterminal"
repository = "https://github.com/stemjail/tty-rs"
readme = "README.md"
keywords = ["linux", "terminal", "pty", "tty"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[dependencies]
fd = "*"
libc = "*"
termios = "*"
