[package]
name = "tty"
version = "0.5.0"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Create and use pseudoterminal"
documentation = "https://stemjail.github.io/rustdoc/tty/"
homepage = "https://stemjail.github.io"
repository = "https://github.com/stemjail/tty-rs"
readme = "README.md"
keywords = ["linux", "terminal", "pty", "tty"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[dependencies]
chan = "0.1"
chan-signal = "0.2"
fd = "0.2.2"
libc = "0.2.*"
termios = "0.2.*"
